projects/vb6parse/snapshots/syntax/statements/file_operations/lock/lock_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/lock.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LockStatement
      children:
        - kind: LockKeyword
          text: Lock
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
    - kind: Newline
      text: "\n"
